<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ifsb.arithmetico.AboutActivity"
    android:background="@color/about_bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_top">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_iv_appicon"
                    android:src="@drawable/appicon"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Arithmetic-O-Mania"
                    android:id="@+id/about_appname"
                    android:layout_toRightOf="@+id/about_iv_appicon"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/about_version"
                    android:id="@+id/about_version"
                    android:layout_below="@+id/about_appname"
                    android:layout_toRightOf="@+id/about_iv_appicon"
                    android:textStyle="bold|italic"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="S Idris, August 2015"
                    android:id="@+id/about_appname2"
                    android:layout_below="@+id/about_version"
                    android:layout_toRightOf="@+id/about_iv_appicon"
                    android:textColor="@android:color/black" />

            </RelativeLayout>

        </FrameLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/about_top"
        android:layout_above="@+id/about_author">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/about_prakata"
                android:id="@+id/about_prakata"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/about_terms"
                android:id="@+id/about_terms"
                android:layout_below="@+id/about_prakata"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Features"
                android:id="@+id/textView"
                android:textColor="@android:color/black"
                android:layout_below="@+id/about_terms"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/about_features"
                android:id="@+id/about_features"
                android:layout_below="@+id/textView"
                android:textColor="@android:color/black" />

        </RelativeLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_author"
        android:id="@+id/about_author"
        android:textColor="@android:color/black"
        android:layout_marginTop="6dp"
        android:layout_above="@+id/about_email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_email"
        android:id="@+id/about_email"
        android:textColor="@android:color/black"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
